cholera 0.5.1.9040
==================

- test amended landmarks and orthoProjLandmarks().


cholera 0.5.1.9039
==================

- add new walkingDistance() and walkingPath() prototypes.


cholera 0.5.1.9038
==================

- consolidate neighborhoodData().
- add walkingDistance() and walkingPath() prototypes.


cholera 0.5.1.9037
==================

- ortho.proj.landmarks -> landmarks.
- landmarks() -> orthoProjLandmarks().
- add draft sources/bibliography vignette.


cholera 0.5.1.9036
==================

- set embed.landmarks = TRUE in neighborhoodData().


cholera 0.5.1.9035
==================

- fix negative selection in addNeighborhoodWalking().


cholera 0.5.1.9034
==================

- add token argument to streetNameLocator () and streetNumberLocator().


cholera 0.5.1.9033
==================

- re-enable "snow" neighborhood.


cholera 0.5.1.9032
==================

- revert profile2D() and profile3D() to non-S3 implementation.


cholera 0.5.1.9031
==================

- add new neighborhoodData() prototype.
- fix pumpTokens().
- add case.col argument to snowMap().


cholera 0.5.1.9030
==================

- add type = "expected" to addNeighborhoodCases().


cholera 0.5.1.9029
==================

- landmarkData() -> landmarks() (prototype).
- add ortho.proj.landmarks (prototype).
- add ortho.proj.landmarks$case (pseudo case #).


cholera 0.5.1.9028
==================

- implement S3 versions of profile2D() and profile3D().


cholera 0.5.1.9027
==================

- amend profile2D().
- amend landmarkData().
- fix snow.colors in pumpTokens().
- document negative radius in streetNameLocator() and streetNumberLocator().
- amend peripheryAudit() and polygonAudit().


cholera 0.5.1.9026
==================

- profilePlot() -> profile2D() and profile3D().
- highlightStree() -> streetHighlight().


cholera 0.5.1.9025
==================

- add addNeighborhoodEuclidean() prototype.
- add landmarkData() prototype.


cholera 0.5.1.9024
==================
