@@ -2,6 +2,7 @@ cholera 0.5.1.9040
 ==================
 
 - test amended landmarks and orthoProjLandmarks().
+- fix walkingPath() landmark destinations.
 
 
 cholera 0.5.1.9039
